--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ debugpy==1.5.1
 decorator==5.1.1
 entrypoints==0.3
 executing==0.8.2
+gunicorn
 ipykernel==6.7.0
 ipython==8.0.0
 jedi==0.18.1
@@ -23,6 +24,7 @@ prompt-toolkit==3.0.24
 pure-eval==0.2.1
 Pygments==2.11.2
 python-dateutil==2.8.2
+psycopg2
 pyzmq==22.3.0
 six==1.16.0
 stack-data==0.1.3
